--- a/src/styles.scss
+++ b/src/styles.scss
@@ -814,6 +814,8 @@ body.theme-win98 {
       box-shadow: inset 1px 1px 0px #000000, 1px 1px 0px #ffffff !important;
       padding: 4px !important;
       margin: 4px !important;
+      width: calc(100% - 8px) !important;
+      box-sizing: border-box !important;
       height: calc(100% - 8px) !important;
       overflow-y: auto !important;
       overflow-x: hidden !important;
